# cortex-code-cookbook

./: README.md  pyproject.toml  snowflake.yml  streamlit_app_sis.py
.github/workflows/: ruff.yml
cookbook/ai/assistant-ui-chat-demo/: README.md  package-lock.json  package.json
cookbook/ai/assistant-ui-chat-demo/scripts/: screenshots.mjs
cookbook/ai/assistant-ui-chat-demo/server/: index.ts
cookbook/ai/assistant-ui-chat-demo/src/: App.tsx  theme.css  thread.tsx
cookbook/ai/cortex-analyst-101/: README.md  sample_data.sql
