[project]
name = "cortex-code-cookbook"
version = "0.1.0"
description = "Cortex Code cookbook samples"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "RUF",  # ruff-specific rules
]
ignore = [
    "D203",   # no-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212 / Google style uses D212)
    "D100",   # missing docstring in public module (handled by module-level docstring)
    "ANN401", # dynamically typed expressions (Any)
    "S101",   # use of assert
    "ISC001", # conflicts with formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["streamlit", "altair", "pandas", "snowflake"]

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
